--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,6 @@
     <div class="scene">
         <canvas></canvas>
     </div>
-    <script type="text/javascript" src="js/js.js"></script>
+    <script type="text/javascript" src="/js/js.js"></script>
 </body>
 </html>
