Draw lines through soket io event emitter

--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,7 @@
     <div class="scene">
         <canvas></canvas>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="/js/js.js"></script>
 </body>
 </html>
